# ScyPro_coursework_5

./: README.md  dbmanager.py  main.py  pyproject.toml  queries.sql  utils.py
